Fix header getting coverted up too much.

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -13,8 +13,7 @@ a {
 .header {
   background: #eee;
   position: relative;
-  height: 154px;
-  padding-top; 10px;
+  height: 164px;
   overflow: hidden;
 }
 
